--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply from: 'config/quality.gradle'
+apply from: 'config/jacoco.gradle'
 
 android {
     compileSdkVersion 25
