--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,9 @@ android {
         ]
     }
     buildTypes {
+        debug {
+            testCoverageEnabled = true
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
