Make UI tests work in Jenkins Pipeline job

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -20,7 +20,7 @@ node {
     }
 
     stage('UI tests') {
-        //uiTests()
+        uiTests()
     }
 
     stage('Static code analysis') {
@@ -132,7 +132,6 @@ def uiTests() {
     START=$SECONDS > /dev/null
     echo no | ${ANDROID_HOME}/tools/android create avd --force -n test -t android-21 --abi default/armeabi-v7a
     ${ANDROID_HOME}/tools/emulator -engine classic -avd test -no-window -no-boot-anim -noaudio -verbose &
-    EMULATOR_PID=$!
 
     # Wait for Android to finish booting
     WAIT_CMD="${ANDROID_HOME}/platform-tools/adb wait-for-device shell getprop init.svc.bootanim"
@@ -147,13 +146,30 @@ def uiTests() {
 
     duration=$(( SECONDS - START )) > /dev/null
     echo "Android Emulator started after $duration seconds."
+    '''
 
-    ./gradlew connectedAndroidTest -PfabricApiKey=${env.FABRIC_API_KEY} -PfabricApiSecret=${env.FABRIC_API_SECRET}
+    // emulator isn't ready yet, wait 1 min more
+    sh "sleep 60"
 
-    // kill started emulator
-    kill $EMULATOR_PID
+    // show available instrumentations (optional)
+    //sh "${ANDROID_HOME}/platform-tools/adb shell \"pm list instrumentation\""
+
+    // uninstall apps first, if needed (optional)
+    //sh "${ANDROID_HOME}/platform-tools/adb shell pm uninstall com.vgaidarji.cimatters"
+    //sh "${ANDROID_HOME}/platform-tools/adb shell pm uninstall com.vgaidarji.cimatters.test"
+
+    // manually install APK's and run instrumentation tests
+    sh "./gradlew assembleDebug -PfabricApiKey=${env.FABRIC_API_KEY} -PfabricApiSecret=${env.FABRIC_API_SECRET}"
+    sh "./gradlew assembleDebugAndroidTest -PfabricApiKey=${env.FABRIC_API_KEY} -PfabricApiSecret=${env.FABRIC_API_SECRET}"
+    sh "${ANDROID_HOME}/platform-tools/adb install app/build/outputs/apk/app-debug.apk"
+    sh "${ANDROID_HOME}/platform-tools/adb install app/build/outputs/apk/app-debug-androidTest.apk"
+    sh "${ANDROID_HOME}/platform-tools/adb shell am instrument -w -r -e debug false -e class com.vgaidarji.cimatters.LoginActivityTest com.vgaidarji.cimatters.test/android.support.test.runner.AndroidJUnitRunner"
+
+    // this variant isn't working, app isn't installed (Exception thrown)
+    //sh "./gradlew connectedAndroidTest -PfabricApiKey=${env.FABRIC_API_KEY} -PfabricApiSecret=${env.FABRIC_API_SECRET}"
 
     // kill all emulators
+    sh'''
     ${ANDROID_HOME}/platform-tools/adb devices | grep emulator | cut -f1 | while read line; do ${ANDROID_HOME}/platform-tools/adb -s $line emu kill; done
     '''
 }
