--- a/app/config/quality.gradle
+++ b/app/config/quality.gradle
@@ -7,7 +7,7 @@ android {
     lintOptions {
         abortOnError false
         xmlReport true
-        htmlReport false
+        htmlReport true
         lintConfig file("${project.rootDir}/app/config/lint/lint.xml")
         htmlOutput file("$project.buildDir/reports/lint/lint-result.html")
         xmlOutput file("$project.buildDir/reports/lint/lint-result.xml")
@@ -28,7 +28,7 @@ task pmd(type: Pmd) {
 
     reports {
         xml.enabled = true
-        html.enabled = false
+        html.enabled = true
         xml {
             destination "$project.buildDir/reports/pmd/pmd.xml"
         }
@@ -56,6 +56,6 @@ task(jdepend, type: JDepend) {
     classesDir = file('build/intermediates/classes/debug/')
     reports {
         xml.enabled true
-        text.enabled false
+        text.enabled true
     }
 }
