Disable jdepnd text reports

--- a/app/config/quality.gradle
+++ b/app/config/quality.gradle
@@ -56,6 +56,6 @@ task(jdepend, type: JDepend) {
     classesDir = file('build/intermediates/classes/debug/')
     reports {
         xml.enabled true
-        text.enabled true
+        text.enabled false
     }
 }
