--- a/.bitrise-with-ui-tests.yml
+++ b/.bitrise-with-ui-tests.yml
@@ -12,12 +12,7 @@ workflows:
     - activate-ssh-key@3.1.1:
         run_if: '{{getenv "SSH_RSA_PRIVATE_KEY" | ne ""}}'
     - git-clone@3.4.1: {}
-    - android-sdk-update@1.0.1:
-        inputs:
-        - platform_tools: stable
-        - build_tools: 24.0.3
-        - sdk_version: '15,22,25'
-        - system_images: extra-google-google_play_services,extra-google-m2repository,extra-android-m2repository,sys-img-armeabi-v7a-android-21
+    - install-missing-android-tools@2.0.5: {}
     - create-android-emulator@0.9.1:
         inputs:
         - name: ci-matters
