--- a/app/build.gradle
+++ b/app/build.gradle
@@ -126,4 +126,7 @@ dependencies {
     androidTestImplementation (deps.espresso.core, {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    // Kotlin
+    implementation deps.kotlin.stdlib
+    implementation deps.kotlin.reflect
 }
