--- a/.bitrise.yml
+++ b/.bitrise.yml
@@ -9,11 +9,11 @@ trigger_map:
 workflows:
   primary:
     steps:
-    - activate-ssh-key@3.1.1:
+    - activate-ssh-key@4.0.3:
         run_if: '{{getenv "SSH_RSA_PRIVATE_KEY" | ne ""}}'
-    - git-clone@3.4.1: {}
-    - install-missing-android-tools@2.0.5: {}
-    - gradle-runner@1.5.2:
+    - git-clone@4.0.12: {}
+    - install-missing-android-tools@2.2.0: {}
+    - gradle-runner@1.8.3:
         title: Gradle Build/Test/Analyse/Distribute
         inputs:
         - gradle_task: assembleDebug testDebug jacocoTestReport checkstyle pmd jdepend
@@ -24,13 +24,13 @@ workflows:
         inputs:
         - coveralls_task: coveralls -PversionCode=$BITRISE_BUILD_NUMBER -PfabricApiKey=$FABRIC_API_KEY
             -PfabricApiSecret=$FABRIC_API_SECRET
-        - coveralls_repo_token: $COVERALLS_REPO_TOKEN
-    - deploy-to-bitrise-io@1.2.5:
+        - coveralls_repo_token: "$COVERALLS_REPO_TOKEN"
+    - deploy-to-bitrise-io@1.3.18:
         title: Deploy test reports to Bitrise.io
         inputs:
         - deploy_path: "$BITRISE_SOURCE_DIR/app/build/reports/jacocoTestReport/"
         - notify_email_list: ''
-    - deploy-to-bitrise-io@1.2.5:
+    - deploy-to-bitrise-io@1.3.18:
         title: Deploy APK to Bitrise.io
 app:
   envs:
