Externalize run-ui-tests script

--- a/.github/android-github-actions/Dockerfile
+++ b/.github/android-github-actions/Dockerfile
@@ -80,6 +80,7 @@ LABEL "homepage"="http://github.com/actions"
 LABEL "maintainer"="Veaceslav Gaidarji <veaceslav.gaidarji@gmail.com>"
 
 COPY ui-tests-on-emulator.sh /usr/bin/ui-tests-on-emulator
+COPY run-ui-tests.sh /usr/bin/run-ui-tests
 COPY kill-running-emulators.sh /usr/bin/kill-running-emulators
 COPY wait-for-emulator.sh /usr/bin/wait-for-emulator
 COPY unlock-emulator-screen.sh /usr/bin/unlock-emulator-screen
