--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,9 @@ jobs:
       - restore_cache:
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       - run:
+          name: Accept Android Licenses
+          command: yes | sdkmanager --licenses && yes | sdkmanager --update  || exit 0
+      - run:
           name: Download Dependencies
           command: ./gradlew clean androidDependencies
       - save_cache:
