--- a/.bitrise.yml
+++ b/.bitrise.yml
@@ -13,13 +13,27 @@ workflows:
         run_if: '{{getenv "SSH_RSA_PRIVATE_KEY" | ne ""}}'
     - git-clone@4.0.12: {}
     - install-missing-android-tools@2.2.0: {}
-    - gradle-runner@1.8.3:
+    - script@1.1.5:
+        inputs:Switched to shell script from Gradle runner at bitrise (#36)
+        - content: |-
+            #!/usr/bin/env bash
+            # fail if any commands fails
+            set -e
+            # debug log
+            set -x
+
+            unset ANDROID_NDK_HOME
+
+            ./gradlew assembleDebug testDebug jacocoTestReport checkstyle pmd jdepend lintDebug buildDashboard assembleDebugAndroidTest crashlyticsUploadDistributionDebug -PversionCode=$BITRISE_BUILD_NUMBER -PfabricApiKey=$FABRIC_API_KEY -PfabricApiSecret=$FABRIC_API_SECRET
         title: Gradle Build/Test/Analyse/Distribute
-        inputs:
-        - gradle_task: assembleDebug testDebug jacocoTestReport checkstyle pmd jdepend
-            lintDebug buildDashboard crashlyticsUploadDistributionDebug -PversionCode=$BITRISE_BUILD_NUMBER
-            -PfabricApiKey=$FABRIC_API_KEY -PfabricApiSecret=$FABRIC_API_SECRET
-        - mapping_file_exclude_filter: ''
+# disabled because of https://github.com/vgaidarji/ci-matters/issues/35
+#    - gradle-runner@1.8.3:
+#        title: Gradle Build/Test/Analyse/Distribute
+#        inputs:
+#        - gradle_task: assembleDebug testDebug jacocoTestReport checkstyle pmd jdepend
+#            lintDebug buildDashboard crashlyticsUploadDistributionDebug -PversionCode=$BITRISE_BUILD_NUMBER
+#            -PfabricApiKey=$FABRIC_API_KEY -PfabricApiSecret=$FABRIC_API_SECRET
+#        - mapping_file_exclude_filter: ''
     - gradle-coveralls@1.0.1:
         inputs:
         - coveralls_task: coveralls -PversionCode=$BITRISE_BUILD_NUMBER -PfabricApiKey=$FABRIC_API_KEY
