--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -19,11 +19,6 @@ jobs:
         FABRIC_API_SECRET: ${{ secrets.FABRIC_API_SECRET }}
       with:
         args: "./gradlew testDebug jacocoTestReport checkstyle pmd jdepend lintDebug buildDashboard -PpreDexEnable=false"
-    - name: Run UI Tests
-      uses: vgaidarji/android-github-actions-emulator@v1.0.1
-      env:
-        FABRIC_API_KEY: ${{ secrets.FABRIC_API_KEY }}
-        FABRIC_API_SECRET: ${{ secrets.FABRIC_API_SECRET }}
     - name: Distribute
       uses: vgaidarji/android-github-actions-build@v1.0.1
       env:
@@ -37,3 +32,17 @@ jobs:
         COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
       with:
         args: "./gradlew coveralls -PpreDexEnable=false"
+  androidTest:
+    runs-on: macOS-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Instrumentation Tests
+        uses: reactivecircus/android-emulator-runner@v2
+        env:
+          FABRIC_API_KEY: ${{ secrets.FABRIC_API_KEY }}
+          FABRIC_API_SECRET: ${{ secrets.FABRIC_API_SECRET }}
+        with:
+          api-level: 29
+          arch: x86
+          disable-animations: true
+          script: ./gradlew connectedAndroidTest --stacktrace
