--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,12 @@
 
 buildscript {
     repositories {
-        jcenter()
+        google()
+        mavenCentral()
         maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.2'
+        classpath 'com.android.tools.build:gradle:8.1.2'
         classpath 'io.fabric.tools:gradle:1.27.1'
         classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.7.1'
         // NOTE: Do not place your application dependencies here; they belong
@@ -16,7 +17,8 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
+        google()
+        mavenCentral()
     }
 }
 
