--- a/.bitrise.yml
+++ b/.bitrise.yml
@@ -24,13 +24,13 @@ workflows:
 
             unset ANDROID_NDK_HOME
 
-            ./gradlew assembleDebug testDebug jacocoTestReport checkstyle pmd jdepend lintDebug buildDashboard assembleDebugAndroidTest crashlyticsUploadDistributionDebug -PversionCode=$BITRISE_BUILD_NUMBER -PfabricApiKey=$FABRIC_API_KEY -PfabricApiSecret=$FABRIC_API_SECRET
+            ./gradlew assembleDebug testDebug jacocoTestReport checkstyle pmd lintDebug buildDashboard assembleDebugAndroidTest crashlyticsUploadDistributionDebug -PversionCode=$BITRISE_BUILD_NUMBER -PfabricApiKey=$FABRIC_API_KEY -PfabricApiSecret=$FABRIC_API_SECRET
         title: Gradle Build/Test/Analyse/Distribute
 # disabled because of https://github.com/vgaidarji/ci-matters/issues/35
 #    - gradle-runner@1.8.3:
 #        title: Gradle Build/Test/Analyse/Distribute
 #        inputs:
-#        - gradle_task: assembleDebug testDebug jacocoTestReport checkstyle pmd jdepend
+#        - gradle_task: assembleDebug testDebug jacocoTestReport checkstyle pmd
 #            lintDebug buildDashboard crashlyticsUploadDistributionDebug -PversionCode=$BITRISE_BUILD_NUMBER
 #            -PfabricApiKey=$FABRIC_API_KEY -PfabricApiSecret=$FABRIC_API_SECRET
 #        - mapping_file_exclude_filter: ''
